     [progressmeter.c]
     don't print \n if backgrounded; from ho@
   - markus@cvs.openbsd.org 2003/03/17 11:43:47
     [version.h]
     enter 3.6
 - (bal) The days of lack of int64_t support are over.  Sorry kids.
 - (bal) scp.c 'limit' conflicts with Cray.  Rename to 'limitbw'
 - (bal) Collection of Cray patches (bsd-cray.h fix for CRAYT3E and improved
   guessing rules)

20030318
 - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
   add nanosleep(). testing/corrections by Darren Tucker <dtucker@zip.com.au>

20030317
 - (djm) Fix return value checks for RAND_bytes. Report from 
   Steve G <linux_4ever@yahoo.com>

20030315
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/03/13 11:42:19
     [authfile.c ssh-keysign.c]
     move RSA_blinding_on to generic key load method
   - markus@cvs.openbsd.org 2003/03/13 11:44:50
     [ssh-agent.c]
     ssh-agent is similar to ssh-keysign (allows other processes to use
     private rsa keys). however, it gets key over socket and not from
     a file, so we have to do blinding here as well.

20030310
- (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/03/05 22:33:43
     [channels.c monitor.c scp.c session.c sftp-client.c sftp-int.c]
     [sftp-server.c ssh-add.c sshconnect2.c]
     fix memory leaks; from dlheine@suif.Stanford.EDU/CLOUSEAU; ok djm@
 - (djm) One more portable-specific one from dlheine@suif.Stanford.EDU/
   CLOUSEAU
 - (djm) Bug #245: TTY problems on Solaris. Fix by stevesk@ and 
   dtucker@zip.com.au
 - (djm) AIX package builder update from dtucker@zip.com.au

20030225
 - (djm) Fix some compile errors spotted by dtucker and his fabulous 
   tinderbox

20030224
 - (djm) Tweak gnome-ssh-askpass2:
   - Retry kb and mouse grab a couple of times, so passphrase dialog doesn't 
     immediately fail if you are doing something else when it appears (e.g. 
     dragging a window)
   - Perform server grab after we have the keyboard and/or pointer to avoid 
     races.